Fixed maxlength on edit inputs

--- a/public/javascripts/templates/analytics.html
+++ b/public/javascripts/templates/analytics.html
@@ -27,7 +27,7 @@
 						{{r.percentage * 100 | number:2}}%
 					</td>
 					<td>
-						{{r.submitted | date:'MM/dd/yy'}}
+						{{r.submitted | date:'MM/dd/yy, h:mma'}}
 					</td>
 				</tr>
 			</tbody>
