Fixed an issue where title wouldn't display in list view

--- a/public/javascripts/templates/list.html
+++ b/public/javascripts/templates/list.html
@@ -15,7 +15,7 @@
 		<a data-ng-click='CopyQuiz(quiz)' alt='Create a copy of this quiz as a new quiz'><i style='color:lightGreen;' class='fi-page-copy'></i></a>
 	</div>
 	<div class='large-9 columns'>
-		<a data-ng-href='#/edit/{{ quiz._id }}' alt='edit quiz' title='Edit this quiz' data-ng-bind-html='quiz.name'>{{quiz.name}}</a>
+		<a data-ng-href='#/edit/{{ quiz._id }}' alt='edit quiz' title='Edit this quiz'>{{quiz.name}}</a>
 
 	</div>
 	<div class='large-2 columns'>
