Options for multiple responses and overwrite/one-off for single responses

--- a/public/javascripts/templates/analytics.html
+++ b/public/javascripts/templates/analytics.html
@@ -21,7 +21,7 @@
 			<tbody>
 				<tr data-ng-repeat='r in responses | orderBy: r.percentage | limitTo:100'>
 					<td>
-						<a ui-sref='viewResults({email:r.email, id:quiz._id})'>{{r.email}}</a> 
+						<a ui-sref='viewResults({email:r.email, id:quiz._id, responseId: r._id})'>{{r.email}}</a> 
 					</td>
 					<td data-ng-show='quiz.type == "poll" || quiz.type == "Poll"'>
 						{{r.percentage * 100 | number:2}}%
