--- a/public/javascripts/templates/results.html
+++ b/public/javascripts/templates/results.html
@@ -6,7 +6,8 @@
 		<h4><a data-ng-click='TakeMeHome()'>Go back home.</a></h4>
 	</div>
 </div>
-<div class='row' data-ng-show='!quiz'>
+<!--
+<div class='row' data-ng-show='!quiz && !responses'>
 	<div class='large-12 columns'>
 		<h4>Please enter your email address, so we can look up your results for this quiz.</h4>
 		<input type='text' data-ng-model='email' placeholder='abc@xyz.com' />
@@ -15,9 +16,9 @@
 		<h4 class='right'><a class='button success' data-ng-click='GetResults()'>Get Results</a></h4>
 	</div>
 </div>
-<div class='row' data-ng-show='!errorMessage && quiz'>
-	<hr/>
-	<div class='large-12 columns panel' data-ng-show='quiz'>
+-->
+<div class='row' data-ng-show='!errorMessage && responses'>
+	<div class='large-12 columns panel' data-ng-show='quiz && responses'>
 		<div class='row' data-ng-show='quiz.thankyou'>
 			<div class='large-12 columns'>
 				<h5 data-ng-bind-html='quiz.thankyou'>{{quiz.thankyou}}</h5>
