--- a/public/javascripts/templates/analytics.html
+++ b/public/javascripts/templates/analytics.html
@@ -20,20 +20,27 @@
 			</thead>
 			<tbody>
 				<tr data-ng-repeat='r in responses | limitTo:1000'>
-					<td>
-						<a ui-sref='viewResults({email:r.email, id:quiz._id, responseId: r._id})'>{{r.email}}</a> 
-					</td>
-					<td data-ng-show='quiz.type == "poll" || quiz.type == "Poll"'>
-						{{r.percentage * 100 | number:2}}%
-					</td>
-					<td>
-						{{r.submitted | date:'MM/dd/yy, h:mma'}}
-					</td>
+					<table>
+						<tr>
+							<td>
+								<a ui-sref='viewResults({email:r.email, id:quiz._id, responseId: r._id})'>{{r.email}}</a> 
+							</td>
+							<td data-ng-show='quiz.type == "poll" || quiz.type == "Poll"'>
+								{{r.percentage * 100 | number:2}}%
+							</td>
+							<td>
+								{{r.submitted | date:'MM/dd/yy, h:mma'}}
+							</td>
+						</tr>
+						<tr>
+							<td colspan="2">
+								<span>{{r.answers[1].response}}</span> 
+							</td>
+						</tr>
+					</table>
 				</tr>
 				<tr data-ng-repeat='r in responses | limitTo:1000'>
-					<td colspan="2">
-						<span>{{r.answers[1].response}}</span> 
-					</td>
+					
 				</tr>
 			</tbody>
 		</table>
