--- a/public/javascripts/templates/analytics.html
+++ b/public/javascripts/templates/analytics.html
@@ -9,6 +9,11 @@
 	</div>
 </div>
 <div class='row'>
+	<div class='large-12 small-12 columns'>
+		<a ng-click='downloadAsCsv()' class='button tiny success expand'>Download Results As CSV</a>
+	</div>
+</div>
+<div class='row'>
 	<div class='large-12 columns'>
 		<table style='width:100%;'>
 			<thead>
@@ -21,7 +26,7 @@
 			<tbody>
 				<tr data-ng-repeat='r in responses | limitTo:1000'>
 					<td>
-						<table>
+						<table style='width:100%;'>
 							<tr>
 								<td>
 									<a ui-sref='viewResults({email:r.email, id:quiz._id, responseId: r._id})'>{{r.email}}</a> 
