--- a/public/javascripts/templates/analytics.html
+++ b/public/javascripts/templates/analytics.html
@@ -10,7 +10,7 @@
 </div>
 <div class='row'>
 	<div class='large-12 small-12 columns'>
-		<a ng-click='downloadAsCsv()' class='button tiny success expand'>Download Results As CSV</a>
+		<a download='answers.csv' ng-href='{{csv}}' class='button tiny success expand'>Download Results As CSV</a>
 	</div>
 </div>
 <div class='row'>
