--- a/views/templates/app.ejs
+++ b/views/templates/app.ejs
@@ -58,7 +58,7 @@
       <ul class='side-nav'>
         <li><a class='button' ui-sref='home'>Home</a></li>
         <li><a class='button' ui-sref='list'>List</a></li>
-        <li><a class='button' href='#'>Analytics</a></li>
+        <li><a class='button' ui-sref='analytics'>Analytics</a></li>
       </ul>
     </div>
     <div class='large-10 columns'>
