Dont show WRONG for unmarked questions, send a scrollToTop message to parent window

--- a/public/javascripts/templates/viewResults.html
+++ b/public/javascripts/templates/viewResults.html
@@ -18,10 +18,10 @@
 				</div>
 			</div>
 			<div class='large-2 columns' data-ng-show='answer.isCorrect'>
-				RIGHT
+				CORRECT
 			</div>
 			<div class='large-2 columns' data-ng-show='!answer.isCorrect'>
-				WRONG
+				<!-- WRONG -->
 			</div>
 			<div class='large-12 columns'>
 				<hr/>
