Update to use https

--- a/views/templates/app.ejs
+++ b/views/templates/app.ejs
@@ -92,7 +92,7 @@
     <script type='text/javascript' src='/vendor/angular/angular-animate.min.js'></script>
     <script type='text/javascript' src='/vendor/ui-router/ui-router.js'></script>
     <script type='text/javascript' src='/vendor/ui-bootstrap/ui-bootstrap.min.js'></script>
-    <script src="http://code.angularjs.org/1.2.7/angular-sanitize.min.js"></script>
+    <script src="https://code.angularjs.org/1.2.7/angular-sanitize.min.js"></script>
     <script type='text/javascript' src='/javascripts/inquizitor.js'></script>
   </body>
 </html>
