--- a/views/templates/front.ejs
+++ b/views/templates/front.ejs
@@ -37,7 +37,7 @@
     <script type='text/javascript' src='/vendor/angular/angular.min.js'></script>
     <script type='text/javascript' src='/vendor/angular/angular-animate.min.js'></script>
     <script type='text/javascript' src='/vendor/ui-router/ui-router.js'></script>
-    <script src="http://code.angularjs.org/1.2.7/angular-sanitize.min.js"></script>
+    <script src="https://code.angularjs.org/1.2.7/angular-sanitize.min.js"></script>
     <script type='text/javascript' src='/javascripts/quiztaker.js'></script>
     <script src="/vendor/rem-polyfill/rem.js" type="text/javascript"></script>
   </body>
